# bleak

./: .gitignore  CMakeLists.txt  generate.sh
client/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  main.cpp
